TIET-3: z-index fix

--- a/themes/tieto_admin/scss/base/elements.scss
+++ b/themes/tieto_admin/scss/base/elements.scss
@@ -5,6 +5,9 @@
  *, *::before, *::after {
   box-sizing: border-box;
  }
+ #toolbar-administration {
+  z-index: 1001;
+ }
 body {
   color: #333;
   background: #fff;
